[gd_scene load_steps=2 format=3 uid="uid://dxl0yttual6o6"]

[ext_resource type="Script" uid="uid://brn35pajpo5xx" path="res://Scenes/Main_Menu/Settings/Scripts/graphics_quality.gd" id="1_jvmb7"]

[node name="Graphics_quality" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvmb7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -105.0
offset_right = 1052.0
offset_bottom = 105.0
grow_vertical = 2
theme_override_constants/separation = 100

[node name="SSAO" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SSAO"]
custom_minimum_size = Vector2(700, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "SSAO"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/SSAO"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 300

[node name="SSAO_check" type="CheckBox" parent="VBoxContainer/SSAO"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="SDFGI" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SDFGI"]
custom_minimum_size = Vector2(700, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "SDFGI"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/SDFGI"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 300

[node name="SDFGI_check" type="CheckBox" parent="VBoxContainer/SDFGI"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="Glow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Glow"]
custom_minimum_size = Vector2(700, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Glow"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Glow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 300

[node name="Glow_check" type="CheckBox" parent="VBoxContainer/Glow"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="toggled" from="VBoxContainer/SSAO/SSAO_check" to="." method="_on_ssao_check_toggled"]
[connection signal="toggled" from="VBoxContainer/SDFGI/SDFGI_check" to="." method="_on_sdfgi_check_toggled"]
[connection signal="toggled" from="VBoxContainer/Glow/Glow_check" to="." method="_on_glow_check_toggled"]
